[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Main.gd" type="Script" id=1]
[ext_resource path="res://scene/upper_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/Standard_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://ressource/Main.tres" type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.1482, 0.151683, 0.19, 1 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upper_Bar" parent="Main_container" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 1024.0
size_flags_stretch_ratio = 0.1

[node name="Middle_Bar" type="HBoxContainer" parent="Main_container"]
margin_left = 209.0
margin_top = 79.0
margin_right = 814.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 4
custom_constants/separation = 5

[node name="Parameter_label" type="Label" parent="Main_container/Middle_Bar"]
margin_top = 13.0
margin_right = 125.0
margin_bottom = 36.0
rect_min_size = Vector2( 125, 0 )
text = "Paramter :"

[node name="Parameter_slider" type="HSlider" parent="Main_container/Middle_Bar"]
margin_left = 130.0
margin_top = 17.0
margin_right = 430.0
margin_bottom = 33.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
step = 0.01
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="min_label" type="Label" parent="Main_container/Middle_Bar"]
margin_left = 435.0
margin_top = 13.0
margin_right = 462.0
margin_bottom = 36.0
text = "Min"

[node name="Min_box" type="SpinBox" parent="Main_container/Middle_Bar"]
margin_left = 467.0
margin_top = 13.0
margin_right = 515.0
margin_bottom = 36.0
size_flags_vertical = 4
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max_label" type="Label" parent="Main_container/Middle_Bar"]
margin_left = 520.0
margin_top = 13.0
margin_right = 552.0
margin_bottom = 36.0
text = "max"

[node name="Max_box" type="SpinBox" parent="Main_container/Middle_Bar"]
margin_left = 557.0
margin_top = 13.0
margin_right = 605.0
margin_bottom = 36.0
size_flags_vertical = 4
step = 0.01
value = 100.0
allow_greater = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View_main" type="TabContainer" parent="Main_container"]
margin_top = 133.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Main_container/View_main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.41778
margin_top = 44.1608
margin_right = -7.41778
margin_bottom = -7.16076

[node name="Title" type="HBoxContainer" parent="Main_container/View_main/List"]
margin_right = 1009.0
margin_bottom = 40.0

[node name="Classement" type="Label" parent="Main_container/View_main/List/Title"]
margin_right = 97.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Classement"
align = 1

[node name="Nom" type="Label" parent="Main_container/View_main/List/Title"]
margin_left = 101.0
margin_top = 9.0
margin_right = 681.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.95
custom_fonts/font = ExtResource( 3 )
text = "Nom"
align = 1

[node name="Prix" type="Label" parent="Main_container/View_main/List/Title"]
margin_left = 685.0
margin_top = 9.0
margin_right = 783.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Prix"
align = 1

[node name="Current_money" type="Label" parent="Main_container/View_main/List/Title"]
margin_left = 787.0
margin_top = 9.0
margin_right = 907.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Current money"
align = 1

[node name="Next_month" type="Label" parent="Main_container/View_main/List/Title"]
margin_left = 911.0
margin_top = 9.0
margin_right = 1009.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Next_month"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Main_container/View_main/List"]
margin_top = 44.0
margin_right = 1009.0
margin_bottom = 415.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List_entry" type="VBoxContainer" parent="Main_container/View_main/List/ScrollContainer"]
margin_right = 1009.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar_graph" type="MarginContainer" parent="Main_container/View_main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.41778
margin_top = 44.1608
margin_right = -7.41778
margin_bottom = -7.16076
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Scroller_BG" type="ScrollContainer" parent="Main_container/View_main/Bar_graph"]
margin_left = 50.0
margin_top = 50.0
margin_right = 959.0
margin_bottom = 365.0

[node name="BG" type="HBoxContainer" parent="Main_container/View_main/Bar_graph/Scroller_BG"]
margin_right = 909.0
margin_bottom = 315.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="save_dialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.0
margin_top = -204.0
margin_right = 283.0
margin_bottom = 204.0
rect_min_size = Vector2( 400, 140 )
window_title = "Enregistrer un fichier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_dialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.5
margin_top = -203.0
margin_right = 281.5
margin_bottom = 203.0
rect_min_size = Vector2( 400, 140 )
window_title = "Ouvrir un fichier"
mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Main_container/Middle_Bar/Parameter_slider" to="." method="_on_Parameter_slider_value_changed"]
[connection signal="value_changed" from="Main_container/Middle_Bar/Min_box" to="." method="_on_Min_box_value_changed"]
[connection signal="value_changed" from="Main_container/Middle_Bar/Max_box" to="." method="_on_Max_box_value_changed"]
[connection signal="file_selected" from="save_dialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="load_dialog" to="." method="_on_load_dialog_file_selected"]
